@@ -1,6 +1,7 @@
 ChangeLog file for Endian libencloud
 
 next:
+	- [CONNECT-149] Connect App sets up routes belonging to previous connection
 
 libencloud 0.7.2 (15/10/2014):
 	- [CONNECT-165] Tell OpenVPN not to cache passwords in memory
